# exchange-apiws

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml
bots/kucoin-dip-buyer/: Cargo.toml  README.md  todo.md
bots/kucoin-dip-buyer/src/: main.rs  strategy.rs
docs/kucoin/: auth.md  changlog.md  endpoints.md  enums.md  error-codes.md  intro.md  rate-limit.md
examples/: binance_public_market.rs  bybit_private_trading.rs  bybit_public_market.rs  cryptocom_public_market.rs  kraken_public_market.rs  kucoin_supervised_feed.rs  market_data.rs  multi_exchange_aggregator.rs
scripts/: release.sh
src/: actors.rs  auth.rs  book.rs  client.rs  connectors.rs  error.rs  http.rs  lib.rs  tls.rs  types.rs
src/binance/: mod.rs  private_rest.rs  private_ws.rs  rest.rs  ws.rs
src/bybit/: auth.rs  mod.rs  private.rs  private_ws.rs  rest.rs  ws.rs
src/coinbase/: mod.rs  ws.rs
src/cryptocom/: auth.rs  mod.rs  private.rs  private_ws.rs  rest.rs  ws.rs
src/kraken/: auth.rs  mod.rs  private.rs  rest.rs  ws.rs
src/okx/: mod.rs  ws.rs
src/rest/: account.rs  margin.rs  market.rs  mod.rs  orders.rs  uta.rs
src/ws/: connect.rs  feed.rs  mod.rs  orders.rs  runner.rs  types.rs
tests/: binance_rest_mock.rs  binance_user_data_mock.rs  binance_ws_mock.rs  bybit_rest_mock.rs  bybit_ws_mock.rs  cryptocom_private_mock.rs  cryptocom_rest_mock.rs  cryptocom_ws_mock.rs  kraken_private_mock.rs  kraken_rest_mock.rs  kraken_ws_mock.rs  public_rest_mock.rs  rest_mock.rs  ws_orders_mock.rs  ws_types.rs
