# Standalone "buy the dip" bot. This is NOT part of the exchange-apiws library
# package — the empty [workspace] table below makes it its own workspace root,
# so `cargo build`/`test` here resolves only the bot's dependencies and never
# pulls in (or is pulled into) the parent crate.
[workspace]

[package]
name = "kucoin-dip-buyer"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
description = "A simple KuCoin BTC-futures 'buy the dip' bot built on exchange-apiws + indicators-ta"
publish = false

[[bin]]
name = "kucoin-dip-buyer"
path = "src/main.rs"

[dependencies]
# KuCoin REST + WebSocket. default-features = false keeps it KuCoin-only
# (KuCoin is always on) — no Binance/Bybit/etc. connectors are compiled in.
exchange-apiws = { path = "../..", default-features = false }

# Technical indicators (RSI / EMA). The crate's published name is
# `indicators-ta` but its library is named `indicators`; the `package` rename
# lets us `use indicators::...` in code.
indicators = { package = "indicators-ta", path = "../../../indicators-ta" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
